cmake_minimum_required(VERSION 3.24)
project(Quiz)

set(CMAKE_CXX_STANDARD 17)

add_executable(Quiz Source.cpp Session1.h Session31.h Session32.h Session4.h Session51.h Session52.h Session61_IteratorPattern.h Session62_ObserverPattern.h Session63_FactoryMethod.h Session64_AbstractFactory.h Session65_Singleton.h Quiz21.h Quiz22.h Quiz23.h)
