cmake_minimum_required(VERSION 3.24)
project(midtern_review2)

set(CMAKE_CXX_STANDARD 20)

add_executable(midtern_review2 main.cpp array_and_string.cpp array_and_string.h two_d_array.cpp two_d_array.h template.cpp template.h IteratorPattern.cpp IteratorPattern.h ObserverPattern.cpp ObserverPattern.h)
